Allow immutable sets to accept `null` in `contains` (EA-239321)
GitOrigin-RevId: 8e1f4c8f92844610a2741dc59885477b0b4fb0a0