@@ -2,6 +2,7 @@
 package com.jetbrains.python;
 
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSet;
 import com.intellij.util.containers.ContainerUtil;
 import com.jetbrains.python.psi.LanguageLevel;
 import org.jetbrains.annotations.NonNls;
@@ -241,7 +242,7 @@ public final class PyNames {
   /**
    * Contains all known predefined names of "__foo__" form.
    */
-  public static final Set<String> UNDERSCORED_ATTRIBUTES = Set.of(
+  public static final Set<String> UNDERSCORED_ATTRIBUTES = ImmutableSet.of(
     "__all__",
     "__annotations__",
     "__author__",
@@ -270,7 +271,7 @@ public final class PyNames {
     "__version__"
   );
 
-  public static final Set<String> COMPARISON_OPERATORS = Set.of(
+  public static final Set<String> COMPARISON_OPERATORS = ImmutableSet.of(
     "__eq__",
     "__ne__",
     "__lt__",
@@ -281,7 +282,7 @@ public final class PyNames {
     "__contains__"
   );
 
-  public static final Set<String> SUBSCRIPTION_OPERATORS = Set.of(
+  public static final Set<String> SUBSCRIPTION_OPERATORS = ImmutableSet.of(
     GETITEM,
     SETITEM,
     DELITEM
@@ -550,7 +551,7 @@ public final class PyNames {
   /**
    * Contains keywords as of CPython 2.5.
    */
-  public static final Set<String> KEYWORDS = Set.of(
+  public static final Set<String> KEYWORDS = ImmutableSet.of(
     AND,
     DEL,
     FROM,
@@ -584,7 +585,7 @@ public final class PyNames {
     TRY
   );
 
-  public static final Set<String> BUILTIN_INTERFACES = Set.of(
+  public static final Set<String> BUILTIN_INTERFACES = ImmutableSet.of(
     CALLABLE, HASHABLE, ITERABLE, ITERATOR, SIZED, CONTAINER, SEQUENCE, MAPPING, ABC_COMPLEX, ABC_REAL, ABC_RATIONAL, ABC_INTEGRAL,
     ABC_NUMBER
   );
@@ -662,7 +663,7 @@ public final class PyNames {
    * <p/>
    * Attributes {@code __doc__}, {@code __dict__} and {@code __module__} should be inherited from object.
    */
-  public static final Set<String> FUNCTION_SPECIAL_ATTRIBUTES = Set.of(
+  public static final Set<String> FUNCTION_SPECIAL_ATTRIBUTES = ImmutableSet.of(
     "__defaults__",
     "__globals__",
     "__closure__",
@@ -670,7 +671,7 @@ public final class PyNames {
     "__name__"
   );
 
-  public static final Set<String> LEGACY_FUNCTION_SPECIAL_ATTRIBUTES = Set.of(
+  public static final Set<String> LEGACY_FUNCTION_SPECIAL_ATTRIBUTES = ImmutableSet.of(
     "func_defaults",
     "func_globals",
     "func_closure",
@@ -680,11 +681,11 @@ public final class PyNames {
     "func_dict"
   );
 
-  public static final Set<String> PY3_ONLY_FUNCTION_SPECIAL_ATTRIBUTES = Set.of("__annotations__", "__kwdefaults__");
+  public static final Set<String> PY3_ONLY_FUNCTION_SPECIAL_ATTRIBUTES = ImmutableSet.of("__annotations__", "__kwdefaults__");
 
-  public static final Set<String> METHOD_SPECIAL_ATTRIBUTES = Set.of("__func__", "__self__", "__name__");
+  public static final Set<String> METHOD_SPECIAL_ATTRIBUTES = ImmutableSet.of("__func__", "__self__", "__name__");
 
-  public static final Set<String> LEGACY_METHOD_SPECIAL_ATTRIBUTES = Set.of("im_func", "im_self", "im_class");
+  public static final Set<String> LEGACY_METHOD_SPECIAL_ATTRIBUTES = ImmutableSet.of("im_func", "im_self", "im_class");
 
   public static final String MRO = "mro";
 }
